name:           yesod-dsl
version:        0.1.1.24
license:        BSD3
license-file:   LICENSE
author:         Tero Laitinen 
maintainer:     Tero Laitinen
synopsis:       DSL for generating Yesod subsite to manage an RDBMS;
description:    A domain specific language and a code generator desined to create RESTful services for managing an RDBMS with Yesod web framework and Persistent.
category:       Web, Yesod
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple
extra-source-files:
    codegen/*.cg

library
    build-depends: base >= 4 && < 5
                 , shakespeare
                 , vector
                 , text 
                 , directory
                 , array 
                 , MissingH 
                 , filepath 
                 , containers
                 , transformers
                 , mtl
                 , strict
                 , Cabal
                 , syb
                 , uniplate
                 , aeson
                 , bytestring
                 , aeson-pretty
    Build-tools:         alex, happy
    ghc-options: -Wall 
    exposed: True
    buildable: True
    exposed-modules:
           YesodDsl.Lexer 
           YesodDsl.Parser
           YesodDsl.ParserState 
           YesodDsl.AST 
           YesodDsl.Simplify
           YesodDsl.Generator 
           YesodDsl.ClassImplementer 
           YesodDsl.ModuleMerger 
           YesodDsl.Generator.Classes
           YesodDsl.Generator.Common
           YesodDsl.Generator.Input
           YesodDsl.Generator.Esqueleto
           YesodDsl.Generator.GetHandler
           YesodDsl.Generator.Handlers
           YesodDsl.Generator.Models
           YesodDsl.Generator.Routes
           YesodDsl.Generator.UpdateHandlers
           YesodDsl.Generator.Validation
           YesodDsl.Generator.Require
           YesodDsl.Generator.Cabal
           YesodDsl.Generator.EsqueletoInstances
           YesodDsl.Generator.Json
           YesodDsl.Generator.EntityFactories
           YesodDsl.SyncFile


executable  yesod-dsl
    main-is: main.hs
    hs-source-dirs: main
    build-depends: base >= 4 && < 5
                 , shakespeare >= 2.0  && < 2.1
                 , text >= 0.11
                 , directory >= 1.1.0.2
                 , array >= 0.4.0.0
                 , MissingH >= 1.2.0.0
                 , filepath >= 1.3.0.0
                 , containers >= 0.4.2.1
                 , mtl >= 2.1.2
                 , strict
                 , Cabal
                 , yesod-dsl
                 
    ghc-options: -Wall 


source-repository head
  type:     git
  location: https://github.com/tlaitinen/yesod-dsl
