name: example
version: 0.0.0
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
 
flag dev
    Description:  Turn on development settings, like auto-reload templates.
    Default: False
 
flag library-only
    Description:  Build for use with "yesod devel"
    Default: False
 
library
    build-depends: unordered-containers -any, transformers -any,
                   tagged -any, blaze-builder -any, http-types -any, wai -any,
                   resourcet -any, attoparsec -any, time -any, vector -any,
                   esqueleto -any, yesod-persistent -any, old-locale -any,
                   filepath -any, unix -any, path-pieces -any, base >=4 && <5,
                   yesod >=1.2 && <1.3, yesod-core >=1.2 && <1.3,
                   yesod-auth >=1.2 && <1.3, yesod-static >=1.2 && <1.3,
                   yesod-form >=1.3 && <1.4, bytestring >=0.9 && <0.11,
                   text >=0.11 && <0.12, persistent >=1.2 && <1.3,
                   persistent-postgresql >=1.2 && <1.3,
                   persistent-template >=1.2 && <1.3, template-haskell -any,
                   hamlet >=1.1 && <1.2, shakespeare-css >=1.0 && <1.1,
                   shakespeare-js >=1.0.2, shakespeare-text >=1.0 && <1.1,
                   hjsmin >=0.1 && <0.2, monad-control >=0.3 && <0.4,
                   wai-extra >=1.3 && <1.4, yaml >=0.8 && <0.9,
                   http-conduit >=1.9 && <1.10, directory >=1.1 && <1.3,
                   warp >=1.3 && <1.4, data-default -any, aeson -any, conduit >=1.0,
                   monad-logger >=0.3, fast-logger >=0.3
     
    if (flag(dev) || flag(library-only))
        exposed: True
        buildable: True
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -O0
    else
        exposed: True
        buildable: True
        ghc-options: -Wall -O2
    exposed-modules: Application Foundation Import Model Settings
                     Settings.StaticFiles Settings.Development Handler.Home
                     Handler.Example Handler.Example.Internal Handler.Example.Enums
                     Handler.Example.Routes Handler.Example.Esqueleto
                     Handler.Example.RouteUsers Handler.Example.RouteUsersUser
                     Handler.Example.RouteBlogposts
                     Handler.Example.RouteBlogpostsBlogPost
                     Handler.Example.RouteComments Handler.Example.RouteCommentsComment
    exposed: True
    buildable: True
    extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                NoImplicitPrelude CPP MultiParamTypeClasses TypeFamilies GADTs
                GeneralizedNewtypeDeriving FlexibleContexts EmptyDataDecls
                NoMonomorphismRestriction DeriveDataTypeable
 
executable example
    build-depends: base -any, example -any, yesod -any
     
    if flag(library-only)
        buildable: False
    main-is: main.hs
    buildable: True
    hs-source-dirs: app
    ghc-options: -threaded -O2
 
test-suite test
    build-depends: base -any, example -any, yesod-test >=1.2 && <1.3,
                   yesod-core -any, yesod -any, persistent -any,
                   persistent-postgresql -any, resourcet -any, monad-logger -any,
                   transformers -any, hspec -any
    type: exitcode-stdio-1.0
    main-is: main.hs
    buildable: True
    hs-source-dirs: tests
    ghc-options: -Wall