name:           yesod-dsl
version:        0.1.1.3
license:        BSD3
license-file:   LICENSE
author:         Tero Laitinen 
maintainer:     Tero Laitinen
synopsis:       DSL for generating Yesod subsite to manage an RDBMS;
description:    A domain specific language and a code generator desined to create RESTful services for managing an RDBMS with Yesod web framework and Persistent.
category:       Web, Yesod
stability:      Experimental
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/tlaitinen/yesod-dsl

extra-source-files:
    codegen/*.cg

executable  yesod-dsl
    main-is: main.hs
    build-depends: base >= 4 && < 5
                 , shakespeare-text >= 1.0  && < 1.1
                 , text >= 0.11
                 , directory >= 1.1.0.2
                 , array >= 0.4.0.0
                 , MissingH >= 1.2.0.0
                 , filepath >= 1.3.0.0
    Build-tools:         alex, happy
    other-modules: Lexer Parser AST Generator ClassImplementer ModuleMerger Validation 
                   Generator.Classes
                   Generator.Common
                   Generator.Esqueleto
                   Generator.GetHandler
                   Generator.Handlers
                   Generator.Models
                   Generator.Routes
                   Generator.UpdateHandlers
                   Generator.Validation
                   Validation.Fields
                   Validation.Names
                   Validation.Refs
                   Validation.Handlers

    ghc-options: -Wall
