name:           yesod-dsl
version:        0.1.1.19
license:        BSD3
license-file:   LICENSE
author:         Tero Laitinen 
maintainer:     Tero Laitinen
synopsis:       DSL for generating Yesod subsite to manage an RDBMS;
description:    A domain specific language and a code generator desined to create RESTful services for managing an RDBMS with Yesod web framework and Persistent.
category:       Web, Yesod
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple
homepage:       https://github.com/tlaitinen/yesod-dsl

extra-source-files:
    codegen/*.cg

library
    build-depends: base >= 4 && < 5
                 , shakespeare-text >= 1.0  && < 1.1
                 , text >= 0.11
                 , directory >= 1.1.0.2
                 , array >= 0.4.0.0
                 , MissingH >= 1.2.0.0
                 , filepath >= 1.3.0.0
                 , containers >= 0.4.2.1
                 , transformers
                 , mtl >= 2.1.2
                 , strict
                 , Cabal
                 , uniplate
    Build-tools:         alex, happy
    ghc-options: -Wall -O0
    exposed: True
    buildable: True
    exposed-modules:
           YesodDsl.Lexer 
           YesodDsl.Parser
           YesodDsl.ParserState 
           YesodDsl.AST 
           YesodDsl.Generator 
           YesodDsl.ClassImplementer 
           YesodDsl.ModuleMerger 
           YesodDsl.Validation
           YesodDsl.Generator.Classes
           YesodDsl.Generator.Common
           YesodDsl.Generator.Esqueleto
           YesodDsl.Generator.GetHandler
           YesodDsl.Generator.Handlers
           YesodDsl.Generator.Models
           YesodDsl.Generator.Routes
           YesodDsl.Generator.UpdateHandlers
           YesodDsl.Generator.Interface
           YesodDsl.Generator.Require
           YesodDsl.Generator.Cabal
           YesodDsl.Generator.EsqueletoInstances
           YesodDsl.Generator.Fay
           YesodDsl.Generator.EntityFactories
           YesodDsl.SyncFile
           YesodDsl.ExpandMacros
           YesodDsl.Validation.Fields
           YesodDsl.Validation.Handlers
           YesodDsl.Validation.State


executable  yesod-dsl
    main-is: main.hs
    hs-source-dirs: main
    build-depends: base >= 4 && < 5
                 , shakespeare-text >= 1.0  && < 1.1
                 , text >= 0.11
                 , directory >= 1.1.0.2
                 , array >= 0.4.0.0
                 , MissingH >= 1.2.0.0
                 , filepath >= 1.3.0.0
                 , containers >= 0.4.2.1
                 , mtl >= 2.1.2
                 , strict
                 , Cabal
                 , uniplate
                 , yesod-dsl
                 
    ghc-options: -Wall -O0
